--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.48.1",
     "dotenv": "^16.4.7",
+    "html-pdf-node": "^1.0.8",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "next": "15.1.6",
+    "pdfkit": "^0.16.0",
+    "pdfmake": "^0.2.18",
     "pg": "^8.13.1",
     "puppeteer": "^24.2.1",
     "react": "^19.0.0",
