--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "puppeteer": "^24.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-toastify": "^11.0.3"
   },
   "devDependencies": {
